varnish: drop varnish::wikimedia_vcl
With the future parser, variable scope is respected in templates.

varnish::wikimedia_vcl is based on the idea that that's not the case.

Change-Id: I02039293180775270d73520e042a6d90dd94192c

--- a/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-common.inc.vcl.erb
@@ -179,7 +179,7 @@ backend <%= name %> {
 <% end # !varnish_testing -%>
 
 sub wm_common_directors_init {
-<% if @dynamic_backend_caches -%>
+<% if @dynamic_backend_caches and not @varnish_testing -%>
 include "directors.<%= @inst %>.vcl";
 <% else -%>
 <% @backend_caches.keys.sort.each do |director_name|
