--- a/modules/gerrit/files/etc/GerritSite.css
+++ b/modules/gerrit/files/etc/GerritSite.css
@@ -76,9 +76,7 @@ table.changeTable a.gwt-Anchor {
 	color: #990000;
 
 	min-height: 59px;
-	background: transparent no-repeat 0 0;
-	background-image: url(/r/static/wikimedia-codereview-logo.cache.png);
-	background-image: linear-gradient(transparent,transparent), url(/r/static/wikimedia-codereview-logo.cache.svg);
+	background: transparent url(/r/static/wikimedia-codereview-logo.cache.png) no-repeat 0 0;
 	text-indent: -9999px;
 	overflow: hidden;
 }
