--- a/modules/profile/templates/cumin/aliases.yaml.erb
+++ b/modules/profile/templates/cumin/aliases.yaml.erb
@@ -158,7 +158,7 @@ swift-be: P{R:class = role::swift::storage}
 swift-be-canary: P{ms-be1013.eqiad.wmnet}
 swift-be-codfw: A:swift-be and A:codfw
 swift-be-eqiad: A:swift-be and A:eqiad
-swift-fe: {R:class = role::swift::proxy}
+swift-fe: P{R:class = role::swift::proxy}
 swift-fe-canary: P{ms-fe1005.eqiad.wmnet}
 swift-fe-codfw: A:swift-fe and A:codfw
 swift-fe-eqiad: A:swift-fe and A:eqiad
