kubernetes: Allow switching storage backend versions
kube-apiserver supports the storage-backend argument that allows setting
the etcd protocol version that it will use to connect to the datastore.
This defaults to etcd2 and we are going to use this version for now but
in the future this is expected to be bumped to etcd3. This will be
possible via hiera flags per cluster so it is expected to happen without
major cross cluster problems

Change-Id: Id6d160cad1380e3074336d85443e6320dab8a0cd

--- a/modules/k8s/templates/kube-apiserver.default.erb
+++ b/modules/k8s/templates/kube-apiserver.default.erb
@@ -28,6 +28,7 @@ KUBE_ADMISSION_CONTROL="--admission-control=<%= @admission_control %>"
 
 DAEMON_ARGS=" \
 --token-auth-file=/etc/kubernetes/tokenauth \
+--storage-backend=<%= @storage_backend %> \
 <%- if @authz_mode == 'abac' -%>
 --authorization-mode=ABAC \
 --authorization-policy-file=/etc/kubernetes/abac \
