browsersec: affect API calls and non-GET as well
While we do want to restrict browser page replacements to /wiki
(avoiding common cs/jss/etc fetches, as well as Special: pages),
we should try to affect API accesses (and/or non-GET traffic in
general) as well.  There shouldn't be much of this percentage
-wise, but it's important in the rare cases it happens that they
see the 418 error as well and realize their software needs
updating....

Bug: T163251
Change-Id: I10cfb4192ad7194564c8cd06420b092fe615ffd3

--- a/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
+++ b/modules/varnish/templates/vcl/wikimedia-frontend.vcl.erb
@@ -267,16 +267,17 @@ sub vcl_recv {
 	// The idea here is to occasionally warn some of our worst clients (in
 	// TLS terms: those using DES-CBC3-SHA, which is not forward-secret,
 	// and the bulk of which are also IE[78]/XP) that their connection
-	// security is awful and point them at our wikitech page for more info.
-	// The X-Conn-Props cipher filter matches ~0.1% of traffic.  We further
-	// restrict to the GET method.  We then only apply the synth to 5% of
-	// matching traffic randomly.  Note that a magic test URL is also
-	// included for viewing the warning content with modern browsers.
+	// security is awful.  The X-Conn-Props cipher filter matches ~0.1% of
+	// traffic.  We then only apply the synth to a subset of matching
+	// traffic randomly.  Note that a magic test URL is also included for
+	// viewing the warning content with modern browsers.
 	if (req.url == "/test-sec-warning"
 	   || (req.http.X-Connection-Properties ~ "C=DES-CBC3-SHA;"
-	   && req.method == "GET"
 	<%- if scope.function_hiera(['cache::cluster']) == "text" -%>
-	   && req.url ~ "^/wiki/" && req.url !~ ":"
+	   && (
+		( req.url ~ "^/wiki/" && req.url !~ ":" )
+		|| req.url ~ "^(/w/api\.php|/api/rest_v1)"
+	   )
 	<%- end -%>
 	   && std.random(0,100) < 11.0)) {
 		return (synth(418, "Browser Connection Security Warning"));
