browsersec: bump to 100% 2017-10-17
TODO: the short, translated statement at the top will need
updating as well, from the current "The Wikimedia wikis will soon
not work" variant to the "Wikipedia does not work" variant.

Bug: T163251
Change-Id: Ic1fb413ceb13fd355f3883a8c88604847bb61106

--- a/modules/varnish/templates/browsersec.body.html.erb
+++ b/modules/varnish/templates/browsersec.body.html.erb
@@ -17,5 +17,5 @@
 <p lang="sq"><strong>Shqip:</strong> Wikit e Wikimedias së shpejti nuk do të funksionojnë me Internet Explorer 8 në Windows XP. Ju lutem përdor një sistem operativ të ri ose përdor <a href="https://www.mozilla.org/sq/firefox/organizations/all/">Firefox 52 ESR</a>.</p>
 <hr>
 <p>We are removing support for the legacy 3DES cryptographic cipher, which your browser software relies on to connect to our sites.  This is usually caused by using Internet Explorer on Windows XP, but could also be caused by other ancient browsers or user agents, or could be interference from corporate or personal "Web Security" software which actually downgrades connection security.</p>
-<p>For now, you can try reloading the page again to continue, but we'll be removing support for these insecure connections completely by October 17, 2017 (2017-10-17), which will block your access to our sites if you haven't upgraded in time.</p>
+<p>You must upgrade your browser or otherwise fix this issue to access our sites.  This message will remain until Nov 17, 2017.  After that date, your browser will not be able to establish a connection to our servers at all.</p>
 <p>See also the <a href="https://wikitech.wikimedia.org/wiki/HTTPS/Browser_Recommendations">HTTPS Browser Recommendations</a> page on Wikitech for more-detailed information.</p>
