--- a/modules/openstack2/templates/liberty/nova/common/api-paste.ini.erb
+++ b/modules/openstack2/templates/liberty/nova/common/api-paste.ini.erb
@@ -139,7 +139,7 @@ paste.filter_factory = nova.api.auth:NovaKeystoneContext.factory
 [filter:authtoken]
 paste.filter_factory = keystonemiddleware.auth_token:filter_factory
 service_protocol = http
-service_host = <%= @nova_controller %>
+service_host = <%= @nova_controller_ip %>
 service_port = 5000
 admin_user = novaadmin
 admin_password = <%= @ldap_user_pass %>
