package_builder: test -nt differs in bash vs dash
When the BUILDRESULT/Packages file does not exist, test -nt in dash
would yield false unlike bash. From the man pages:

dash(1)
  file1 -nt file2
    True if file1 and file2 exist and file1 is newer than file2.
                  ^^^^^^^^^^^^^^^

bash(1)
  file1 -nt file2
    True if file1 is newer (according  to  modification  date) than
    file2, or if file1 exists and file2 does not (exist).
                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^

Fix up D05localsources which uses dash by catching lack of a Packages
file.

Change-Id: I94e12a9c2bec116d29cfb53886b06333dd7114d3

--- a/modules/package_builder/templates/D05localsources.erb
+++ b/modules/package_builder/templates/D05localsources.erb
@@ -5,7 +5,7 @@ if [ "${APT_USE_BUILT}" = "yes" -a -d ${BUILDRESULT} ]; then
 
     # make-like behaviour
     newest_file=$(ls --almost-all --reverse --sort=time ${BUILDRESULT}/*.deb ${BUILDRESULT}/*.dsc | tail -n 1)
-    if [ "${newest_file}" -nt "${BUILDRESULT}/Packages" ]; then
+    if [ ! -e "${BUILDRESULT}/Packages" ] || [ "${newest_file}" -nt "${BUILDRESULT}/Packages" ]; then
         ( cd $BUILDRESULT && apt-ftparchive packages . > Packages )
     fi
 
