Thumbor: enable new MAX_ANIMATED_GIF_AREA option
Bug: T173580
Change-Id: Ief91a92e05d2c3fdbbe72ec4e422590042cff95e

--- a/modules/thumbor/templates/server.conf.erb
+++ b/modules/thumbor/templates/server.conf.erb
@@ -189,6 +189,9 @@ FAILURE_THROTTLING_PREFIX = 'thumbor-failure-'
 THREED2PNG_PATH = '/srv/deployment/3d2png/deploy/src/3d2png.js'
 <%- end -%>
 
+# Animated GIFs greater than 100MP render as the first frame only
+MAX_ANIMATED_GIF_AREA = 100000000
+
 
 ################################### Logging ##################################
 
