apertium: move to role/profile
Change-Id: I65f9890bad802dedee36296bf1b4bbfe309d59e1

--- a/modules/profile/templates/initscripts/apertium-apy.systemd.erb
+++ b/modules/profile/templates/initscripts/apertium-apy.systemd.erb
@@ -1,7 +1,7 @@
 # NOTE: This file is managed by Puppet
-# Systemd unit for <%= @title %>-apy
+# Systemd unit for apertium-apy
 [Unit]
-Description="<%= @title %>-apy service"
+Description="apertium-apy service"
 
 [Service]
 User=<%= @uid %>
