restructure dumps webserver, zim manifests to module/role/profile
Other dumps-related manifests will get moved into the dumps module
and profile directories later.

Change-Id: I87da750a869061774156bde2997fce0f1908baf6

--- a/modules/dumps/templates/web/nginx.dumps.conf.erb
+++ b/modules/dumps/templates/web/nginx.dumps.conf.erb
@@ -1,3 +1,8 @@
+#####################################
+# this file is maintained by puppet!
+# modules/dumps/templates/web/nginx.dumps.conf.erb
+#####################################
+
 limit_conn_zone $remote_addr$http_user_agent zone=addr:10m;
 
 server {
